force-app/main/default/objects/Communication_Template__c/Communication_Template__c.object-meta.xml
<CustomObject>
    <label>Communication Template</label>
    <nameField>
        <displayFormat>CT-{000}</displayFormat>
        <label>Communication Template</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>