force-app/main/default/objects/Communication_Template__c/fields/Attachment_Query__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Query__c</fullName>
    <label>Attachment Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>