force-app/main/default/objects/Communication_Template__c/fields/CC_Addresses__c.field-meta.xml
<CustomField>
    <fullName>CC_Addresses__c</fullName>
    <label>CC Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>