force-app/main/default/objects/Communication_Template__c/fields/Email_From__c.field-meta.xml
<CustomField>
    <fullName>Email_From__c</fullName>
    <label>Email From</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>