force-app/main/default/objects/Communication_Template__c/fields/Email_Service__c.field-meta.xml
<CustomField>
    <fullName>Email_Service__c</fullName>
    <label>Email Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Services</valueSetName>
    </valueSet>
</CustomField>