force-app/main/default/objects/Communication_Template__c/fields/Email_To__c.field-meta.xml
<CustomField>
    <fullName>Email_To__c</fullName>
    <label>Email To</label>
    <length>75000</length>
    <type>LongTextArea</type>
</CustomField>