force-app/main/default/objects/Communication_Template__c/fields/Nimbus_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Nimbus_Template_Id__c</fullName>
    <label>Nimbus Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>