force-app/main/default/objects/Communication_Template__c/fields/Template_Body_Query__c.field-meta.xml
<CustomField>
    <fullName>Template_Body_Query__c</fullName>
    <label>Template Body Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>