force-app/main/default/objects/Communication_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Body__c</columns>
    <columns>Channel_Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Nimbus_Template_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>